Fixed horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+body{ overflow-x: hidden;}
+
 .header {
     height: 100vh;
     width: 100%;
